--- a/GhibliCollector/main_app/templates/movies/index.html
+++ b/GhibliCollector/main_app/templates/movies/index.html
@@ -5,12 +5,15 @@
 
 {% for movie in movies %}
   <div class="card">
+    <a href="{% url 'detail' movie.id %}">
     <div class="card-content">
+
       <span class="card-title">{{ movie.name }}</span>
       <p>Release: {{ movie.release }}</p>
       <p>Director: {{ movie.director }}</p>
       <p>Music: {{movie.music}}</p>
     </div>
+</a>
   </div>
 {% endfor %}
 
