--- a/GhibliCollector/main_app/templates/movies/detail.html
+++ b/GhibliCollector/main_app/templates/movies/detail.html
@@ -1,15 +1,60 @@
+
 {% extends 'base.html' %}
 {% block content %}
 
 <h1>Movie Details</h1>
 
-<div class="card">
-  <div class="card-content">
-    <span class="card-title">{{ movie.name }}</span>
-    <p>Release Year: {{ movie.release }}</p>
-    <p>Director: {{ movie.director }}</p>
-    <p>Music: {{movie.music}}</p>
+<div class="row">
+  <div class="col s6">
+    <div class="card">
+        <div class="card-content">
+            <span class="card-title">{{ movie.name }}</span>
+            <p>Release Year: {{ movie.release }}</p>
+            <p>Director: {{ movie.director }}</p>
+            <p>Music: {{movie.music}}</p>
+          </div>
+          <div class="card-action">
+            <a href="{% url 'movies_update' movie.id %}">Edit</a>
+            <a href="{% url 'movies_delete' movie.id %}">Delete</a>
+          </div>
+    </div>
+  </div>
+  <div class="col s6">
+     <!-- new code below -->
+  <form method="POST" action="{% url 'add_watching' movie.id %}">
+    {% csrf_token %}
+    {{ watching_form.as_p }}
+    <input type="submit" class="btn" value="Add Watching">
+  </form>
+  <!-- new code above -->
+  <table class="striped">
+    <table class="striped">
+      <thead>
+        <tr><th>Date</th><th>Time</th></tr>
+      </thead>
+      <tbody>
+        {% for watching in movie.watching_set.all %}
+          <tr>
+            <td>{{watching.date}}</td>
+            <td>{{watching.get_time_display}}</td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
   </div>
 </div>
 
+<script>
+const dateEl = document.getElementById('id_date');
+  M.Datepicker.init(dateEl, {
+    format: 'yyyy-mm-dd',
+    defaultDate: new Date(),
+    setDefaultDate: true,
+    autoClose: true
+  });
+
+    // add additional JS to initialize select below
+  const selectEl = document.getElementById('id_time');
+  M.FormSelect.init(selectEl);
+</script>
 {% endblock %}
