--- a/GhibliCollector/main_app/templates/base.html
+++ b/GhibliCollector/main_app/templates/base.html
@@ -19,7 +19,8 @@
         </ul>
         <ul class="right">
           <li><a href="{% url 'about' %}">About</a></li>
-
+          <li><a href="{% url 'actors_create' %}">Add a Actor</a></li>
+          <li><a href="{% url 'actors_index' %}">View All Actors</a></li>
           <li><a href="{% url 'movies_create' %}">Add a Movie</a></li>
           <!-- new markup below -->
           <li><a href="{% url 'index' %}">View All Ghibli Movies</a></li>   
