--- a/GhibliCollector/main_app/templates/movies/detail.html
+++ b/GhibliCollector/main_app/templates/movies/detail.html
@@ -44,6 +44,53 @@
   </div>
 </div>
 
+<!-- This is all new markup to be added just above the <script> tag -->
+    <hr>
+    <div class="row">
+      <div class="col s6">
+        <h3>{{ movie.name }}'s Actors</h3>
+        {% if movie.actors.count %}
+          {% for actor in movie.actors.all %}
+            <div class="card">
+              <div class="card-content">
+                <span class="card-title">
+                 {{ actor.name }}
+                </span>
+              </div>
+            </div>
+          {% endfor %}
+        {% else %}
+          <h5>No Actors :(</h5>
+        {% endif %}
+      </div>
+      <!-- Available toys will come after this line -->
+    </div>
+
+</div>
+<!-- Available toys will come after this line -->
+<div class="col s6">
+  <h3>Available Actors</h3>
+  {% if actors.count %}
+    {% for actor in actors.all %}
+      <div class="card">
+        <div class="card-content">
+          <span class="card-title">
+           {{ actor.name }}
+          </span>
+        </div>
+        <div class="card-action">
+          <form action="{% url 'assoc_actor' movie.id actor.id %}" method="POST">
+            {% csrf_token %}
+            <button type="submit" class="btn">Add</button>
+          </form>
+        </div>
+      </div>
+    {% endfor %}
+  {% else %}
+    <h5>{{cat.name}} Already Has All Actors Available</h5>
+  {% endif %}
+</div>
+
 <script>
 const dateEl = document.getElementById('id_date');
   M.Datepicker.init(dateEl, {
